For mobile views, simplify ajax failure and success down to icons to solve overflow/overlap issues

--- a/app/assets/stylesheets/white_theme/comments.scss
+++ b/app/assets/stylesheets/white_theme/comments.scss
@@ -185,14 +185,25 @@
           border: 1px solid #fff;
           &.comment_fail {
             border: 1px solid #ff1f75;
+            @media #{$mobile} {
+              border: 0;
+            }
           }
           &.comment_success {
             border: 1px solid #67c906;
+            @media #{$mobile} {
+              border: 0;
+            }
           }
           div.ajax_success {
             padding-right: 2px;
             color: #2b8800;
             padding-top: 6.5px;
+            @media #{$mobile} {
+              span {
+                display: none;
+              }
+            }
             &::after {
               position: absolute;
               top: 7px;
@@ -204,6 +215,11 @@
             padding-right: 2px;
             color: #b20035;
             padding-top: 6.5px;
+            @media #{$mobile} {
+              span {
+                display: none;
+              }
+            }
             &::after {
               position: absolute;
               top: 7.5px;
